--- a/templates/register.html
+++ b/templates/register.html
@@ -35,9 +35,14 @@
     {% endif %}
     <br>
 
-    <div class="form-group">
-      <input class="form-control" name="password" placeholder="&#128273 Contraseña" type="password"
-        style="border-radius:10px; width: 100%; padding: 10px; border: 1px solid #ccc;" />
+    <div class="form-group" style="position: relative;">
+      <input style="border-radius: 10px; width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc;"
+        class="form-control" name="password" placeholder="&#128273 Contraseña" type="password" id="password" />
+
+      <button type="button" id="togglePassword"
+        style="background: none; border: none; cursor: pointer; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); font-size: 20px;">
+        👀
+      </button>
     </div>
 
     {% if messager == 2 %}
@@ -50,9 +55,15 @@
     {% endif %}
     <br>
 
-    <div class="form-group">
-      <input class="form-control" name="confirmation" placeholder="&#128273 Confirmar Contraseña" type="password"
-        style="border-radius:10px; width: 100%; padding: 10px; border: 1px solid #ccc;" />
+    <div class="form-group" style="position: relative;">
+      <input style="border-radius: 10px; width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc;"
+        class="form-control" name="confirmation" placeholder="&#128273 confirmar Contraseña" type="password"
+        id="confirmation" />
+
+      <button type="button" id="toggleConfirmation"
+        style="background: none; border: none; cursor: pointer; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); font-size: 20px;">
+        👀
+      </button>
     </div>
 
     {% if messager == 4 %}
@@ -90,6 +101,8 @@
     {% endif %}
   </form>
 </div>
+
+<script src="{{ url_for('static', filename='js/button.js' )}}"></script>
 
 {% endblock %}
 
