--- a/templates/register.html
+++ b/templates/register.html
@@ -2,123 +2,129 @@
 {% block body %}
 
 <div class="header d-flex justify-content-end" style="position: relative; left: -50px;">
-  <h5>
-    <a href="/admin">Volver</a>
-  </h5>
+    <h5>
+        <a href="/admin">Volver</a>
+    </h5>
 </div>
 
 <script>
-  function right() {
-    document.getElementById("display").innerHTML = "✔";
-  }
+    function right() {
+        document.getElementById("display").innerHTML = "✔";
+    }
 </script>
 
 <div class="mainregister"
-  style="position:relative; width: 400px; background:white; height: 500px; box-shadow: 0 12px 19px rgba(0, 0, 0, 0.2); border-radius: 40px; margin: auto; padding: 20px;">
-  <center>
-    <h3 style="margin-bottom: 30px;">Registrar</h3>
-  </center>
+    style="position: relative; width: 400px; background: white; height: 550px; box-shadow: 0 12px 19px rgba(0, 0, 0, 0.2); border-radius: 40px; margin: auto; padding: 20px;">
 
-  <form action="/register" method="post" enctype="multipart/form-data">
-    <div class="form-group">
-      <input autocomplete="off" autofocus class="form-control" name="username" placeholder="👤 Nombre de Usuario"
-        type="text" style="border-radius:10px; width: 100%; padding: 10px; border: 1px solid #ccc;" />
-    </div>
-
-    {% if messager == 1 %}
     <center>
-      <div class="alert alert-danger" role="alert"
-        style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center;">
-        &#9997 Por favor, ingrese su nombre de usuario.
-      </div>
+        <h3 style="margin-top: 14px; margin-bottom: 30px;">Registrar</h3>
     </center>
-    {% endif %}
-    <br>
 
-    <div class="form-group" style="position: relative;">
-      <input style="border-radius: 10px; width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc;"
-        class="form-control" name="password" placeholder="&#128273 Contraseña" type="password" id="password" />
+    <form action="/register" method="post" enctype="multipart/form-data">
 
-      <button type="button" id="togglePassword"
-        style="background: none; border: none; cursor: pointer; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); font-size: 20px;">
-        👀
-      </button>
-    </div>
+        <div class="form-group">
+            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="👤 Nombre de Usuario"
+                type="text" style="border-radius: 10px; width: 100%; padding: 10px; border: 1px solid #ccc;" />
+        </div>
 
-    {% if messager == 2 %}
-    <center>
-      <div class="alert alert-danger" role="alert"
-        style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center;">
-        &#9997 Por favor, introduzca su contraseña.
-      </div>
-    </center>
-    {% endif %}
-    <br>
+        {% if messager == 1 %}
+        <center>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert"
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center;">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="float: right;">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                &#9997 Por favor, ingrese su nombre de usuario.
+            </div>
+        </center>
+        {% endif %}
 
-    <div class="form-group" style="position: relative;">
-      <input style="border-radius: 10px; width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc;"
-        class="form-control" name="confirmation" placeholder="&#128273 confirmar Contraseña" type="password"
-        id="confirmation" />
+        <br>
 
-      <button type="button" id="toggleConfirmation"
-        style="background: none; border: none; cursor: pointer; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); font-size: 20px;">
-        👀
-      </button>
-    </div>
+        <div class="form-group" style="position: relative;">
+            <input style="border-radius: 10px; width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc;"
+                class="form-control" name="password" placeholder="&#128273 Contraseña" type="password" id="password" />
 
-    {% if messager == 4 %}
-    <center>
-      <div class="alert alert-danger" role="alert"
-        style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center;">
-        &#9997 Por favor, confirme su contraseña.
-      </div>
-    </center>
-    {% endif %}
-    <br>
+            <button type="button" id="togglePassword"
+                style="background: none; border: none; cursor: pointer; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); font-size: 20px;">
+                👀
+            </button>
+        </div>
 
-    <div style="text-align: center; margin-top: 20px;">
-      <button class="btn btn-success" type="submit" style="border-radius:40px; width: 100%; max-width: 400px;">
-        Registrar
-      </button>
-    </div>
+        {% if messager == 2 %}
+        <center>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert"
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center;">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="float: right;">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                &#9997 Por favor, introduzca su contraseña.
+            </div>
+        </center>
+        {% endif %}
 
-    {% if messager == 3 %}
-    <center>
-      <div class="alert alert-danger" role="alert"
-        style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center;">
-        &#10060 Las contraseñas no coinciden. Por favor, inténtelo de nuevo.
-      </div>
-    </center>
-    {% endif %}
+        <br>
 
-    {% if messager == 5 %}
-    <center>
-      <div class="alert alert-danger" role="alert"
-        style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center;">
-        &#9997 Nombre de usuario ya está en uso.
-      </div>
-    </center>
-    {% endif %}
-  </form>
+        <div class="form-group" style="position: relative;">
+            <input style="border-radius: 10px; width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc;"
+                class="form-control" name="confirmation" placeholder="&#128273 Confirmar Contraseña" type="password"
+                id="confirmation" />
+
+            <button type="button" id="toggleConfirmation"
+                style="background: none; border: none; cursor: pointer; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); font-size: 20px;">
+                👀
+            </button>
+        </div>
+
+        {% if messager == 4 %}
+        <center>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert"
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center;">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="float: right;">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                &#9997 Por favor, confirme su contraseña.
+            </div>
+        </center>
+        {% endif %}
+
+        <br>
+
+        <div style="text-align: center;">
+            <button class="btn btn-success" type="submit" style="border-radius:40px; width: 100%; max-width: 400px;">
+                Registrar
+            </button>
+        </div>
+
+        {% if messager == 3 %}
+        <center>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert"
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; margin-top: 18px;">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="float: right;">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                &#10060 Las contraseñas no coinciden. Por favor, inténtelo de nuevo.
+            </div>
+        </center>
+        {% endif %}
+
+        <br>
+
+        {% if messager == 5 %}
+        <center>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert"
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align:center;">
+                <button type='button' class='close' data-dismiss='alert' aria-label='close' style='float:right'>
+                    <span aria-hidden='true'>&times;</span>
+                </button>
+                &#9997 Nombre de usuario ya está en uso.
+            </div>
+        </center>
+        {% endif %}
+
+    </form>
 </div>
 
-<script src="{{ url_for('static', filename='js/button.js' )}}"></script>
+<script src="{{ url_for('static', filename='js/button.js') }}"></script>
 
-{% endblock %}
-
-{% block footer %}
-{% with messages = get_flashed_messages(with_categories=True) %}
-{% if messages %}
-{% for category, message in messages %}
-{% if category == 'success' %}
-<center>
-  <div class="alert alert-success" role="alert"
-    style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center;">
-    {{ message }}
-  </div>
-</center>
-{% endif %}
-{% endfor %}
-{% endif %}
-{% endwith %}
 {% endblock %}
