--- a/templates/login.html
+++ b/templates/login.html
@@ -9,13 +9,13 @@
 
 <div class="mainlogin"
     style="position: relative; width: 400px; background: white; height: 550px; box-shadow: 0 12px 19px rgba(0, 0, 0, 0.2); border-radius: 40px; margin: auto; padding: 20px;">
-    
+
     <center>
         <h3 style="margin-top: 14px; margin-bottom: 30px;">Iniciar Sesión</h3>
     </center>
-    
+
     <form action="/login" method="post" enctype="multipart/form-data">
-        
+
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="👤 Nombre de Usuario"
                 type="text"
@@ -60,7 +60,8 @@
 
         <div style="text-align: center; margin-bottom: 20px; font-size: 15px; font-weight: bold;">
             O<br>
-            <a href="/facereg" style="text-decoration: none; color: #007bff;">Iniciar sesión con reconocimiento facial</a>
+            <a href="/facereg" style="text-decoration: none; color: #007bff;">Iniciar sesión con reconocimiento
+                facial</a>
         </div>
 
         <div style="text-align: center; margin-top: 20px;">
