--- a/templates/camera.html
+++ b/templates/camera.html
@@ -22,6 +22,8 @@
 {% endif %}
 {% endwith %}
 
+<h1 style="text-align: center; margin-bottom: 24px;">Face recognition</h1>
+
 <div
     style="display: flex; flex-direction: column; align-items: center; justify-content: flex-start; height: 100vh; margin: 0; padding: 0;">
     <div style="position: relative; width: 640px; height: 480px;">
