--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,8 +20,8 @@
                 style="width: 130px; height: 130px; margin-left: 30px;">
             <h1 class="mb-0 ms-auto">CONTROL DE AULAS DE SISTEMAS</h1>
             <div class="d-flex align-items-center">
-                <img src="{{ url_for('static', filename='imagen2.png') }}" alt="Infraestructura TI"
-                    style="width: 130px; height: 130px; margin-right: 10px;">
+                <img src="{{ url_for('static', filename='imagen2.jpg') }}" alt="Infraestructura TI"
+                    style="width: 130px; height: 150px; margin-right: 10px;">
             </div>
         </div>
     </div>
