--- a/templates/index.html
+++ b/templates/index.html
@@ -63,5 +63,6 @@
         <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
 </div>
+<div style="margin-top: 40px;"></div>
 
 {% endblock %}
