--- a/templates/admin.html
+++ b/templates/admin.html
@@ -5,6 +5,9 @@
 
 <div class="header d-flex justify-content-end">
     <h5>
+        <a href="/reports">Reportes</a>
+    </h5>
+    <h5>
         <a href="/users">Usuarios</a>
     </h5>
     <h5>
