--- a/templates/admin.html
+++ b/templates/admin.html
@@ -5,7 +5,7 @@
 
 <div class="header d-flex justify-content-end">
     <h5>
-        <a href="/reports">Reportes</a>
+        <a href="/generate">Reportes</a>
     </h5>
     <h5>
         <a href="/users">Usuarios</a>
