--- a/templates/generate.html
+++ b/templates/generate.html
@@ -5,6 +5,7 @@
 
 <div class="header d-flex justify-content-end">
     <h5>
+        <a href="/download">Descargar</a>
         <a href="/reports">Volver</a>
     </h5>
 </div>
