--- a/templates/restore.html
+++ b/templates/restore.html
@@ -14,35 +14,22 @@
         <h3 style="margin-bottom: 30px; margin-top: 10px;">Actualizar Datos de Usuario</h3>
     </center>
 
-    <form action="/restore/{{ id }}" method="post">
+    <form action="/restore/{{ id }}" method="POST" enctype="multipart/form-data">
 
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="👤 Nombre de Usuario"
+            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="👤 Nombre de usuario"
                 type="text"
-                style="border-radius: 10px; width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc;"
-                value="{{ username }}" readonly />
+                style="border-radius: 10px; width: 100%; padding: 10px; border: 1px solid #ccc; font-size: 14px;">
         </div>
 
-        <br>
-
-        <div class="form-group" style="position: relative;">
-            <input style="border-radius: 10px; width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc;"
-                class="form-control" name="password" placeholder="&#128273 Contraseña" type="password" id="password" />
-
-            <button type="button" id="togglePassword"
-                style="background: none; border: none; cursor: pointer; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); font-size: 20px;">
-                👀
-            </button>
-        </div>
-
-        {% if messager == 2 %}
+        {% if messager == 1 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
-                style="border-radius: 10px; width: 100%; max-width: 400px; text-align:center;">
-                <button type='button' class='close' data-dismiss='alert' aria-label='Close' style='float:right'>
-                    <span aria-hidden='true'>&times;</span>
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; font-size: 14px;">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="float: right;">
+                    <span aria-hidden="true">&times;</span>
                 </button>
-                &#9997 Por favor, introduzca una contraseña.
+                &#9997 Por favor, ingrese su nombre de usuario.
             </div>
         </center>
         {% endif %}
@@ -50,21 +37,67 @@
         <br>
 
         <div class="form-group" style="position: relative;">
-            <input style="border-radius: 10px; width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc;"
+            <input style="border-radius: 10px; width: 100%; padding: 10px; border: 1px solid #ccc; font-size: 14px;"
+                class="form-control" name="password" placeholder="&#128273 Contraseña" type="password" id="password">
+            <button type="button" id="togglePassword"
+                style="background: none; border: none; cursor: pointer; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); display: flex; align-items: center;">
+                <img id="eyeIcon" src="{{ url_for('static', filename='eye-closed.png')}}"
+                    alt="Toggle password visibility" style="width: 20px; height: 20px;">
+            </button>
+        </div>
+
+        {% if messager == 2 %}
+        <center>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert"
+                style="border-radius: 10px; width: 100%; text-align: center; margin-bottom: 0px;  font-size: 14px;">
+                <button type="button" class="close" data-dismiss="alert" aria-label="close" style="float: right;">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                &#9997 Por favor, ingrese su contraseña.
+            </div>
+        </center>
+        {% endif %}
+
+        <br>
+
+        <div class="form-group" style="position: relative;">
+            <input
+                style="border-radius: 10px; width: 100%; max-width: 400px; padding: 10px; border: 1px solid #ccc; font-size: 14px;"
                 class="form-control" name="confirmation" placeholder="&#128273 Confirmar Contraseña" type="password"
                 id="confirmation" />
 
             <button type="button" id="toggleConfirmation"
-                style="background: none; border: none; cursor: pointer; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); font-size: 20px;">
-                👀
+                style="background: none; border: none; cursor: pointer; position: absolute; right: 10px; top: 50%; transform: translateY(-50%);">
+                <img id="eyeIconConfirmation" src="{{ url_for('static', filename='eye-closed.png') }}"
+                    alt="Toggle password visibility" style="width: 20px; height: 20px;">
+            </button>
+        </div>
+
+        {% if messager == 4 %}
+        <center>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert"
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; font-size: 14px;">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="float: right;">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                &#9997 Por favor, confirme su contraseña.
+            </div>
+        </center>
+        {% endif %}
+
+        <br>
+
+        <div style="text-align: center;">
+            <button class="btn btn-success" type="submit" style="border-radius:10px; width: 100%; max-width: 400px;">
+                Actualizar
             </button>
         </div>
 
         {% if messager == 3 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
-                style="border-radius: 10px; width: 100%; max-width: 400px; text-align:center;">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="float:right;">
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; margin-top: 18px;">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="float: right;">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 &#10060 Las contraseñas no coinciden. Por favor, inténtelo de nuevo.
@@ -74,11 +107,17 @@
 
         <br>
 
-        <div style="text-align:center;">
-            <button class="btn btn-success" type="submit" style="border-radius:10px; width:100%; max-width:400px;">
-                Actualizar
-            </button>
-        </div>
+        {% if messager == 5 %}
+        <center>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert"
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align:center;">
+                <button type='button' class='close' data-dismiss='alert' aria-label='close' style='float:right'>
+                    <span aria-hidden='true'>&times;</span>
+                </button>
+                &#9997 Nombre de usuario ya está en uso.
+            </div>
+        </center>
+        {% endif %}
 
     </form>
 
