--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,3 +1,28 @@
+body {
+    background-color: rgb(255, 255, 255);
+    
+}
+label {
+    font-weight: bold;
+    font-size: 17px;
+}
+
+.btn {
+    font-size: 17px;
+}
+
+.form-control {
+    font-size: 17px;
+}
+
+.alert {
+    font-weight: bold;
+    font-size: 17px;
+}
+
+table {
+    font-size: 15px;
+}
 .header {
     background-color: #3b5998;
     text-align: center;
