--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,8 +8,7 @@
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css') }}">
 </head>
 
 <body>
@@ -21,7 +20,7 @@
             <h1 class="mb-0 ms-auto">CONTROL DE AULAS DE SISTEMAS</h1>
             <div class="d-flex align-items-center">
                 <img src="{{ url_for('static', filename='imagen2.jpg') }}" alt="Infraestructura TI"
-                    style="width: 130px; height: 150px; margin-right: 10px;">
+                    style="width: 130px; height: 150px; margin-right: 30px;">
             </div>
         </div>
     </div>
@@ -41,7 +40,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/layout.js') }}"></script>
 
 </body>
 
