--- a/templates/users.html
+++ b/templates/users.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block body %}
 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles2.css') }}">
+
 <div class="header d-flex justify-content-end">
     <h5>
         <a href="/goback">Volver</a>
