--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style2.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles2.css') }}">
 
 <div class="header d-flex justify-content-end">
     <h5>
