--- a/static/css/styles2.css
+++ b/static/css/styles2.css
@@ -2,6 +2,8 @@
     background-color: #3b5998;
     color: white;
     padding: 10px;
+    width: 110%;
+    margin-left: -60px;
 }
 
 .header a {
@@ -14,8 +16,10 @@
     text-decoration: underline;
 }
 table {
-    width: 100%;
+    width: 110%;
+    margin-left: 0px;
 }
 .table-responsive {
-    width: 100%;
+    width: 110%;
+    margin-left: -60px;
   }
