--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<div class="header d-flex justify-content-end" style="position: relative; left: -50px;">
+<div class="header d-flex justify-content-end">
     <h5>
         <a href="/admin">Volver</a>
     </h5>
@@ -25,7 +25,7 @@
         {% if messager == 1 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
-                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; font-size: 14px;">
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; margin: 0 auto; font-size: 14px;">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="float: right;">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -49,7 +49,7 @@
         {% if messager == 2 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
-                style="border-radius: 10px; width: 100%; text-align: center; margin-bottom: 0px;  font-size: 14px;">
+                style="border-radius: 10px; width: 100%; text-align: center; margin: 0 auto;  font-size: 14px;">
                 <button type="button" class="close" data-dismiss="alert" aria-label="close" style="float: right;">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -76,7 +76,7 @@
         {% if messager == 4 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
-                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; font-size: 14px;">
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; margin: 0 auto; font-size: 14px;">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="float: right;">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -96,7 +96,7 @@
         {% if messager == 3 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
-                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; margin-top: 18px;">
+                style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center;margin: 0 auto;  margin-top: 18px;">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="float: right;">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -110,7 +110,7 @@
         {% if messager == 5 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
-                style="border-radius: 10px; width: 100%; max-width: 400px; text-align:center;">
+                style="border-radius: 10px; width: 100%; max-width: 400px; margin: 0 auto; text-align:center;">
                 <button type='button' class='close' data-dismiss='alert' aria-label='close' style='float:right'>
                     <span aria-hidden='true'>&times;</span>
                 </button>
