--- a/templates/reports.html
+++ b/templates/reports.html
@@ -9,7 +9,7 @@
     </h5>
 </div>
 
-<div class="container mt-4">
+<div class="container mt-4" style="width: 110%; margin-left: -60px;">
     <h2 style="margin-bottom: 20px;">Generar reporte por fecha</h2>
     <form action="{{ url_for('generate') }}" method="post">
         <div class="form-group">
