--- a/templates/users.html
+++ b/templates/users.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<link rel="stylesheet" href="{{ url_for('static', filename='css/styles2.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles2.css')}}">
 
 <div class="header d-flex justify-content-end">
     <h5>
@@ -22,7 +22,7 @@
 {% endif %}
 {% endwith %}
 
-<table class="table table-striped table-bordered bg-white">
+<table class="table table-striped table-bordered bg-white" style="width: 110%; margin-left: -60px;;">
     <thead>
         <tr>
             <td><b>Ítem</b></td>
