--- a/templates/reports.html
+++ b/templates/reports.html
@@ -14,11 +14,11 @@
     <form action="{{ url_for('generate') }}" method="post">
         <div class="form-group">
             <label for="start_date">Fecha de inicio</label>
-            <input type="date" class="form-control" id="start_date" name="start_date" required>
+            <input type="date" class="form-control" id="start_date" name="start_date" required style="width: 107%;">
         </div>
         <div class="form-group">
             <label for="end_date">Fecha de fin</label>
-            <input type="date" class="form-control" id="end_date" name="end_date" required>
+            <input type="date" class="form-control" id="end_date" name="end_date" required style="width: 107%;">
         </div>
         <button type="submit" class="btn btn-secundary">Generar</button>
     </form>
