--- a/templates/admin.html
+++ b/templates/admin.html
@@ -21,9 +21,9 @@
 {% with messages = get_flashed_messages() %}
 {% if messages %}
 {% for message in messages %}
-<div class="alert alert-success alert-dismissible fade show" role="alert">
+<div class="alert alert-success alert-dismissible fade show" role="alert" style="width: 110%; margin-left: -60px;">
     {{ message }}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="margin-top: 0px;">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
