--- a/templates/admin.html
+++ b/templates/admin.html
@@ -37,7 +37,7 @@
             <tr>
                 <th><b>Ítem</b></th>
                 <th><b>Fecha</b></th>
-                <th><b>Aula</b></th>
+                <th><b>Laboratorio</b></th>
                 <th><b>Nombres</b></th>
                 <th><b>Correo electrónico</b></th>
                 <th><b>Programa</b></th>
