--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="form-group">
             <label for="correo_electronico">Correo electrónico</label>
-            <input type="text" name="correo_electronico" class="form-control"
+            <input type="email" name="correo_electronico" class="form-control"
                 value="{{ form_data.correo_electronico if form_data else '' }}">
         </div>
         <div class="form-group">
