--- a/templates/edit.html
+++ b/templates/edit.html
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
             <label for="identificador_laboratorio">Identificador de laboratorio</label>
-            <input type="text" name="identificador_aula" value="{{id.2}}" placeholder="" class="form-control">
+            <input type="text" name="identificador_laboratorio" value="{{id.2}}" placeholder="" class="form-control">
         </div>
         <div class="form-group">
             <label for="nombre_docente">Nombre de docente</label>
