Latest project update

--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
                 style="border-radius: 10px; width: 100%; padding: 10px; border: 1px solid #ccc; font-size: 14px;">
         </div>
 
-        {% if messager == 1%}
+        {% if message == 1%}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
                 style="border-radius: 10px; width: 100%; text-align: center; font-size: 14px;">
@@ -43,7 +43,7 @@
             </button>
         </div>
 
-        {% if messager == 2 %}
+        {% if message == 2 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
                 style="border-radius: 10px; width: 100%; text-align: center; margin-bottom: 0px;  font-size: 14px;">
@@ -70,7 +70,7 @@
         </div>-->
     </form>
 
-    {% if messager == 3 %}
+    {% if message == 3 %}
     <center>
         <div class="alert alert-danger alert-dismissible fade show" role="alert"
             style="border-radius: 10px; width: 100%; text-align: center; margin-top: 18px; font-size: 14px;">
