--- a/templates/register.html
+++ b/templates/register.html
@@ -22,7 +22,7 @@
                 style="border-radius: 10px; width: 100%; padding: 10px; border: 1px solid #ccc; font-size: 14px;">
         </div>
 
-        {% if messager == 1 %}
+        {% if message == 1 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
                 style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; margin: 0 auto; font-size: 14px;">
@@ -46,7 +46,7 @@
             </button>
         </div>
 
-        {% if messager == 2 %}
+        {% if message == 2 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
                 style="border-radius: 10px; width: 100%; text-align: center; margin: 0 auto;  font-size: 14px;">
@@ -73,7 +73,7 @@
             </button>
         </div>
 
-        {% if messager == 4 %}
+        {% if message == 4 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
                 style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; margin: 0 auto; font-size: 14px;">
@@ -93,7 +93,7 @@
             </button>
         </div>
 
-        {% if messager == 3 %}
+        {% if message == 3 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
                 style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center;margin: 0 auto;  margin-top: 18px;">
@@ -107,7 +107,7 @@
 
         <br>
 
-        {% if messager == 5 %}
+        {% if message == 5 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
                 style="border-radius: 10px; width: 100%; max-width: 400px; margin: 0 auto; text-align:center;">
