--- a/templates/restore.html
+++ b/templates/restore.html
@@ -34,7 +34,7 @@
             </button>
         </div>
 
-        {% if messager == 2 %}
+        {% if message == 2 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
                 style="border-radius: 10px; width: 100%; text-align: center; margin-bottom: 0px;  font-size: 14px;">
@@ -61,7 +61,7 @@
             </button>
         </div>
 
-        {% if messager == 4 %}
+        {% if message == 4 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
                 style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; font-size: 14px;">
@@ -81,7 +81,7 @@
             </button>
         </div>
 
-        {% if messager == 3 %}
+        {% if message == 3 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
                 style="border-radius: 10px; width: 100%; max-width: 400px; text-align: center; margin-top: 18px;">
@@ -95,7 +95,7 @@
 
         <br>
 
-        {% if messager == 5 %}
+        {% if message == 5 %}
         <center>
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
                 style="border-radius: 10px; width: 100%; max-width: 400px; text-align:center;">
