latest project update

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -45,12 +45,12 @@
             <input type="datetime" name="hora_salida" value="{{id.7}}" placeholder="" class="form-control">
         </div>
         <div class="form-group">
-            <label for="observaciones">Observaciones</label>
-            <textarea name="observaciones" placeholder="" class="form-control">{{id.8}}</textarea>
+            <label for="observacion">Observaciones</label>
+            <textarea name="observacion" placeholder="" class="form-control">{{id.8}}</textarea>
         </div>
         <div class="form-group">
-            <label for="respuesta_incidencias">Respuesta de incidencias</label>
-            <textarea name="respuesta_incidencias" placeholder="" class="form-control">{{id.9}}</textarea>
+            <label for="respuesta_incidencia">Respuesta de incidencias</label>
+            <textarea name="respuesta_incidencia" placeholder="" class="form-control">{{id.9}}</textarea>
         </div>
         <button type="submit" class="btn btn-primary">Modificar</button>
     </form>
