--- a/templates/index.html
+++ b/templates/index.html
@@ -68,8 +68,8 @@
                 value="{{ form_data.hora_salida if form_data else '' }}">
         </div>
         <div class="form-group">
-            <label for="observaciones">Observaciones</label>
-            <textarea name="observaciones"
+            <label for="observacion">Observaciones</label>
+            <textarea name="observacion"
                 class="form-control">{{ form_data.observaciones if form_data else '' }}</textarea>
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
